tonb. config:TAB_SIZE

--- a/nbgit/default.config.yaml
+++ b/nbgit/default.config.yaml
@@ -101,3 +101,15 @@ HEADER_END: '"""'
 
 
 
+
+###########################################################
+#
+# nbpy.ipynb file CONFIG
+#
+###########################################################
+TAB_SIZE: 4
+
+
+
+
+
