Py2NB(path) not Py2NB(lines).  doc-comments

--- a/nbgit/default.config.yaml
+++ b/nbgit/default.config.yaml
@@ -107,6 +107,11 @@ HEADER_END: '"""'
 # nbpy.ipynb file CONFIG
 #
 ###########################################################
+# """ TAB_SIZE
+#   tabsize for ipynb files.  note unless you are in the 
+#   habit of looking at your raw ipynb json you'll probably
+#   never see it :)
+# """
 TAB_SIZE: 4
 
 
