--- a/gitnb/default.config.yaml
+++ b/gitnb/default.config.yaml
@@ -6,13 +6,15 @@
 
 # """ NBPY_DIR/CREATE_DIRS
 #
-#      GIT_ADD_ON_GitNB_ADD: call `git add` for new nbpy files
+#      GIT_ADD_ON_GITNB_ADD: call `git add` for new nbpy files
 #      UPDATE_ON_COMMIT: update all tracked files before `git commit`
+#      GIT_ADD_ON_GITNB_UPDATE: call `git add` after `gitnb update`
 #      AUTO_TRACK_ALL_NOTEBOOKS: `gitnb add` all notebooks before `git commit`
 #
 # """
-GIT_ADD_ON_GitNB_ADD: True
+GIT_ADD_ON_GITNB_ADD: True
 UPDATE_ON_COMMIT: True
+GIT_ADD_ON_GITNB_UPDATE: False
 AUTO_TRACK_ALL_NOTEBOOKS: False
 
 
